# apotheca

./: CMakeLists.txt  README.md  bitmap.c  bitmap.h  freetype.c  freetype2.c  main.c
demo/: CMakeLists.txt  fontinfo.c  main.c
eikon/: CMakeLists.txt  bitmap.c  blit.c  eikon.h  fileio.c  scale.c  text.c
